app/layout/less/base/header-mobile.less
/* ==========================================================================
   Top menu custom styles
   ========================================================================== */

/*
a.nav-expander {
    background: none repeat scroll 0 0 #ccc;
    color: #FFFFFF;
    display: block;
    font-size: 15px;
    font-weight: 400;
    height: 50px;
    margin-right: 0;
    padding: 1em 1.6em 2em;
    position: absolute;
    right: -10px;
    text-decoration: none;
    text-transform: uppercase;
    top: 0;
    transition: right 0.3s ease-in-out 0s;
    width: 130px;
    z-index: 12;

    transition: right 0.3s ease-in-out 0s;
    -webkit-transition: right 0.3s ease-in-out 0s;
    -moz-transition: right 0.3s ease-in-out 0s;
    -o-transition: right 0.3s ease-in-out 0s;

}

a.nav-expander:hover {
    cursor: pointer;
}

a.nav-expander.fixed {
    position: fixed;
}

.nav-expanded a.nav-expander.fixed {
    right: 20em;
}

nav.main {
    background: #f1f1f1;
    border-left: 0px solid #000;
    display: block;
    height: 100%;
    overflow: auto;
    position: fixed;
    right: -21em;
    font-size: 15px;
    top: 0;
    width: 21em;
    z-index: 2000;

    transition: right 0.3s ease-in-out 0s;
    -webkit-transition: right 0.3s ease-in-out 0s;
    -moz-transition: right 0.3s ease-in-out 0s;
    -o-transition: right 0.3s ease-in-out 0s;

}
.nav-expanded nav {
    right: 0;
}

body.nav-expanded {
    margin-left: 0em;
    transition: right 0.4s ease-in-out 0s;
    -webkit-transition: right 0.4s ease-in-out 0s;
    -moz-transition: right 0.4s ease-in-out 0s;
    -o-transition: right 0.4s ease-in-out 0s;
}

#nav-close {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 300;
    font-size: 18px;
    padding-right: 10px;
}

.main-menu {
    padding-top: 12px;
}

.main-menu li {
    border-bottom: 1px solid #323949;
    margin-left: 20px;
    font-size: 18px;
    padding: 6px 12px;
    margin-right: 20px;
}
.main-menu li:last-child {
    border-bottom: 0;
}

.main-menu li a {
    color: #203340;
    text-decoration: none;
}

.main-menu li a:hover {
    color: black;
    text-decoration: none;
}

.main-menu li:hover {
     background: #ccc;
 }

.main-menu li .sub-nav {
    border-bottom: 0px;
    padding: 4px;
}

.main-menu a .caret {
    width: 0;
    height: 0;
    display: inline-block;
    vertical-align: top;
    border-top: 4px solid #4f5963;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
    content: "";
    margin-top: 8px;
}

.main-menu a:hover .caret {
    border-top-color: #4f5963;
}

.main-menu li.open > a > .caret {
    border-top: none;
    border-bottom: 4px solid #4f5963;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
}

.main-menu li.open > a:hover > .caret {
    border-bottom-color: #4f5963;
}

.icon:before {
    font-family: 'FontAwesome';
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    line-height: 1;
    text-transform: none;
    content: '\f105';
}

.main-menu li > a > span.icon {
    float: right;
    margin: 0.1em 1.7em -0.1em 0;
    opacity: 0;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;

}

.main-menu li > a:hover > span.icon {
    float: right;
    margin: 0.1em 0.8em -0.1em 0;
    opacity: 1;
}
.main-menu li.no-bg a {
    color: #5c6266;
}
.main-menu li.no-bg:hover {
    background: transparent;
}
.main-menu li.no-border {
    border: 0;
}
.bottom-menu {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
}
.main-menu.bottom-menu a {
    color: #5c6266;
}
.navbar {
    min-height: 50px;
    box-shadow: 2px 1px 5px 2px rgba(0,0,0,0.1)
}

.navbar-inverse {
    background-color: #f1f1f1;
    border-color: #f1f1f1;
}

a.nav-expander {
    color: #000000;
    background: #f1f1f1;
    width: 70px;
    .fa-lg {
        color: #000000;
    }
}

.navbar-brand > img {
    width: 80px;
    height: 18px;
}

#dark-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    filter: alpha(opacity=50);
    opacity: 0.5;
    z-index: 1000;
}
*/

.navbar {
    min-height: 50px;
    box-shadow: 2px 1px 5px 2px rgba(0,0,0,0.1);
}

.navbar-nav .divider {
    border: 1px solid red;
}

.navbar-inverse {
    background-color: #f1f1f1;
    border-color: #f1f1f1;
}

.navbar-brand > img {
    width: 80px;
    height: 18px;
}

.navbar-inverse .navbar-collapse {
    border-color: transparent;
}

.navbar-inverse .navbar-toggle {
    border-color: transparent;
}

.navbar-inverse .navbar-toggle .icon-bar {
    background: @brandColor3;
}

.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
    background: @white;
}

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
    background: @brandColor3;

}

.navbar-inverse .navbar-nav > li > a {
    color: @brandColor3;
}

.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
    color: @brandColor3;
    background: @white;
}

/*
@media (min-width: 768px) and (max-width: 991px) {
    .navbar-header {
        float: none;
    }
    .navbar-nav,
    .navbar-nav.navbar-right {
        float: none !important;
    }
    .navbar-nav > li {
        float: none;
    }
    .navbar-form {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
        float: right;
    }
    .navbar-collapse.collapse {
        //display: none !important;
    }
}
*/

